カレンダー修正

--- a/calendarJq.html
+++ b/calendarJq.html
@@ -1,5 +1,4 @@
 <!-- 2022/02/27 カレンダー作成 */ -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,8 +7,9 @@
 <title>カレンダー</title>
 </head>
 <body onload="on_load();">
+<script src="jquery-3.6.0.min.js"></script>
 <script src="holiday_jp.js"></script>
-<script src="calendar.js"></script>
+<script src="calendarJq.js"></script>
 <table id="dayCalendar">
   <tr style="background-color: #dcdcdc;">
   	<th colspan="7">
